--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # compiled output
 /dist
 /node_modules
+/**/build
+/**/dist
+/**/node_modules
 
 # Logs
 logs
@@ -33,6 +36,7 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/*.code-snippets
 
 # typescript to js build file
 build/*
